# soma

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  azure-pipelines.yml  rustfmt.toml
ci/: build.yml  install-lcow.yml  install-prerequisites.yml  rust-build.yml  rust-install.yml
hooks/: pre-commit  pre-push
src/: data_dir.rs  docker.rs  error.rs  lib.rs  main.rs  ops.rs  prelude.rs  problem.rs  repo.rs  repository.rs  template.rs
src/cli/: mod.rs  terminal_printer.rs
src/cli/commands/: add.rs  list.rs  mod.rs
src/problem/: binary_config.rs  configs.rs
src/problem/configs/: binary.rs  common.rs
src/repo/: backend.rs  manager.rs  repo_manager.rs
src/repository/: backend.rs  manager.rs
templates/binary/: Dockerfile  configure_permissions.sh  start.sh
test_repo/ab/: soma-list.toml
test_repo/ab/a/: soma.toml
test_repo/ab/b/: soma.toml
test_repo/abc/: soma-list.toml
test_repo/abc/c/: soma.toml
tests/: add.rs  add_remove.rs  build_clean.rs  fetch.rs  location_to_backend.rs  parse_repo_location.rs  run.rs  run_stop.rs  test.rs  update.rs
tests/common/: mod.rs  test_printer.rs
