[package]
name = "soma"
version = "0.1.0"
edition = "2018"
authors = ["Yechan Bae <qwazpia@gmail.com>", "Kangsu Kim <pica744@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Your one-stop CTF problem management tool"
repository = "https://github.com/PLUS-POSTECH/soma"
keywords = ["ctf", "hacking"]
categories = ["command-line-utilities", "config"]
readme = "README.md"


[dependencies]
bollard = "0.2.1"
clap = "~2.32.0"
crossterm = "0.6.0"
dirs = "1.0.4"
failure = "0.1.5"
flate2 = "1.0.6"
fs2 = "0.4.3"
fs_extra = "1.1.0"
futures = "0.1.25"
git2 = "0.8.0"
handlebars = "1.1.0"
hyper = "0.12.24"
lazy_static = "1.2.0"
path-slash = "0.1.1"
regex = "1.1.0"
remove_dir_all = "0.5.1"
serde = { version = "1.0.88", features = ["derive"] }
serde_cbor = "0.9.0"
tar = "0.4.20"
tempfile = "3.0.6"
tokio = "0.1.15"
toml = "0.4.10"
typetag = "0.1.1"
url = "1.7.2"
whoami = "0.4.1"

[dev-dependencies]
matches = "0.1.8"
serde_test = "1.0.88"

[lib]
name = "soma"
path = "src/lib.rs"

[[bin]]
name = "soma"
test = false
doc = false
